--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -1,12 +1,32 @@
 {% include head.html %}
 
+<style>
+  main.store {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+  }
+</style>
+
 <body>
   <img class="background" src="/images/double_typhoon.webp" />
 
   {% include header.html %}
 
-  <main id="store">
+  <main class="store">
     <h1>{{ page.title }}</h1>
+
+    <iframe
+      src="{{ page.google }}"
+      width="600"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
   </main>
 
   {% include footer.html %}
