:sparkles: adicionar interface gundam

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,31 +1,16 @@
 {% include head.html %}
 <style>
-  main.home,
-  div.group,
-  ul,
-  li {
+  main.home {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-
-  main.home {
-    gap: 3rem;
-    padding: 2rem;
-  }
-
-  div.group {
-    gap: 1rem;
-  }
-
-  ul {
-    gap: 0.5rem;
+    gap: 1.5rem;
   }
 </style>
 
 <body>
-  <img class="background" src="/images/double_typhoon.webp" />
+  <img class="background" src="/images/represa_rio_preto.webp" />
 
   {% include header.html %}
 
