:mag: adição de thumbnail para jogos

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
 </style>
 
 <body>
-  <img class="background" src="/images/represa_rio_preto.webp" />
+  <img class="background" src="/images/represa_rio_preto.webp" alt="" />
 
   {% include header.html %}
 
