--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -20,16 +20,27 @@
     gap: 1.5rem;
   }
 
+  picture.logo {
+    width: 250px;
+    height: 100px;
+
+    & img {
+      object-fit: contain;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   ul {
     gap: 0.5rem;
   }
 
+  ul.events {
+    gap: 2rem;
+  }
+  
   li {
     gap: 0.25rem;
-  }
-
-  ul.events {
-    gap: 1rem;
   }
 </style>
 
@@ -44,7 +55,10 @@ events = posts | where: "layout", "event" %} {% assign stores = posts | where:
 
   <main class="home">
     <div class="group">
-      <img src="/images/{{ page.logo }}" width="250" alt="{{ page.title }}" />
+      <picture class="logo">
+        <img src="/images/{{ page.logo }}" alt="logo {{ page.title }}" />
+      </picture>
+
       <p class="description">{{ page.description }}</p>
     </div>
 
@@ -108,7 +122,7 @@ events = posts | where: "layout", "event" %} {% assign stores = posts | where:
     const eventDate = new Date(event.dataset.date)
     const days = diff(today, eventDate)
 
-    if (days < -1) {
+    if (days < -1 || days > 31) {
       event.style.display = 'none'
     } else if (days > 15 && index !== 0) {
       event.style.opacity = '0.6'
