--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,15 @@
 <footer></footer>
+
+<!-- Google tag (gtag.js) -->
+<script
+  async
+  src="https://www.googletagmanager.com/gtag/js?id=G-2BC41VFFE7"
+></script>
+<script>
+  window.dataLayer = window.dataLayer || []
+  function gtag() {
+    dataLayer.push(arguments)
+  }
+  gtag("js", new Date())
+  gtag("config", "G-2BC41VFFE7")
+</script>
