--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -8,7 +8,7 @@
     align-items: center;
     gap: 0.5rem;
 
-    padding: 3rem 2rem;
+    padding: 1rem 1rem 3rem;
   }
 
   iframe {
@@ -24,7 +24,7 @@
     margin-top: 2rem;
   }
 
-  p.store {
+  div.store {
     display: none;
   }
 </style>
@@ -52,19 +52,3 @@
 
   {% include footer.html %}
 </body>
-
-<script>
-  const today = new Date()
-  function diff(first, second) {
-    return Math.round((second - first) / (1000 * 60 * 60 * 24))
-  }
-
-  document.querySelectorAll(".event").forEach((event, index) => {
-    const eventDate = new Date(event.dataset.date)
-    const days = diff(today, eventDate)
-
-    if (days < -1 || days > 31) {
-      event.style.display = "none"
-    }
-  })
-</script>
