--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,3 +13,19 @@
   gtag("js", new Date())
   gtag("config", "G-2BC41VFFE7")
 </script>
+
+<script>
+  const today = new Date()
+  function diff(first, second) {
+    return Math.round((second - first) / (1000 * 60 * 60 * 24))
+  }
+
+  document.querySelectorAll(".event").forEach((event, index) => {
+    const eventDate = new Date(event.dataset.date)
+    const days = diff(today, eventDate)
+
+    if (days < 0 || days > 31) {
+      event.style.display = "none"
+    }
+  })
+</script>
