--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,8 +86,8 @@ site.url | append: site.baseurl | append: "/images/" | append: page.thumbnail %}
 
     main {
       z-index: 0;
-      min-height: 100vh;
-      min-height: 100dvh;
+      min-height: calc(100vh - 4rem);
+      min-height: calc(100dvh - 4rem);
     }
 
     img.background {
@@ -162,7 +162,17 @@ site.url | append: site.baseurl | append: "/images/" | append: page.thumbnail %}
 
     /* Content Header */
     header {
-      display: none;
+      height: 4rem;
+      padding: 1rem;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    header img.icon {
+      width: 2rem;
+      height: 2rem;
     }
 
     /* Content Footer */
