--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -3,7 +3,7 @@
 <style>
   main.home {
     gap: 3rem;
-    padding: 3rem 2rem;
+    padding: 1rem 1rem 3rem;
   }
 
   picture.logo {
@@ -58,21 +58,3 @@ events = posts | where: "layout", "event" %} {% assign stores = posts | where:
 
   {% include footer.html %}
 </body>
-
-<script>
-  const today = new Date()
-  function diff(first, second) {
-    return Math.round((second - first) / (1000 * 60 * 60 * 24))
-  }
-
-  document.querySelectorAll(".event").forEach((event, index) => {
-    const eventDate = new Date(event.dataset.date)
-    const days = diff(today, eventDate)
-
-    if (days < -1 || days > 31) {
-      event.style.display = "none"
-    } else if (days > 15 && index !== 0) {
-      event.style.opacity = "0.6"
-    }
-  })
-</script>
