--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
+    gap: 5rem;
+
+    padding: 1rem 1rem 3rem;
+  }
+
+  img {
+    width: 450px;
+    max-width: 100%;
+    object-fit: contain;
+    aspect-ratio: 3 / 1;
   }
 </style>
 
