:sparkles: adicionar assinatura e separador de semanas

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,8 @@
-<footer></footer>
+<footer>
+  <a href="https://johnywalves.com.br" target="_blank">
+    <p>Desenvolvido com <span>♥</span> por <span>Johny W. Alves</span></p>
+  </a>
+</footer>
 
 <!-- Google tag (gtag.js) -->
 <script
