--- a/_includes/next_events.html
+++ b/_includes/next_events.html
@@ -28,7 +28,13 @@
           {% assign game_name = 'Gundam' %}
       {% endif %}
 
-      <li class="event" data-date="{{ post.date | date: "%Y-%m-%d" }}">
+      {% if week_day <= week_day_prev %}
+        <p class="separator">―</p>
+      {% endif %}
+
+      {% assign week_day_prev = post.date | date: "%u" %}
+
+      <li class="event" data-game="{{ category }}"  data-date="{{ post.date | date: "%Y-%m-%d" }}">
         <h3>{{ post.date | date: "%d/%m (" }}{{ week }}{{ post.date | date: ") • %H:%M" }}</h3>
         <small>{{ post.title }}</small>
           <div class="store">
