--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,9 +5,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 5rem;
+    gap: 6rem;
 
     padding: 1rem 1rem 3rem;
+  }
+
+  p.description {
+    font-size: 1.25rem;
+  }
+
+  div.games {
+    margin-bottom: 2rem;
   }
 
   img {
