:memo: atualizar agenda de outubro Epic Level

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -177,6 +177,7 @@ site.url | append: site.baseurl | append: "/images/" | append: page.thumbnail %}
     header img.icon {
       width: 2rem;
       height: 2rem;
+      opacity: 0.75;
     }
 
     /* Content Footer */
