--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -49,6 +49,7 @@ events = posts | where: "layout", "event" %} {% assign stores = posts | where:
         <li>
           <a href="{{ post.url | relative_url }}">
             <h3>{{ post.title }}</h3>
+            <p>{{ post.city }}</p>
           </a>
         </li>
         {% endfor %}
