--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -11,15 +11,6 @@
     padding: 1rem 1rem 3rem;
   }
 
-  iframe {
-    display: block;
-    max-width: 600px;
-    width: 100%;
-    height: 450px;
-    border: none;
-    margin-top: 2rem;
-  }
-
   div.group {
     margin-top: 2rem;
   }
@@ -42,6 +33,8 @@
   <main class="store">
     <h1>{{ page.title }}</h1>
     <p>{{ page.address }}</p>
+
+    {% if page.google %}
     <iframe
       src="{{ page.google }}"
       title="Localização {{ page.title }}"
@@ -49,8 +42,7 @@
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
     ></iframe>
-
-    {% include next_events.html %}
+    {% endif %} {% include next_events.html %}
   </main>
 
   {% include footer.html %}
