--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
+    gap: 0.5rem;
 
     padding: 1rem 1rem 3rem;
   }
@@ -36,11 +36,13 @@
     <p>{{ page.address }}</p>
 
     <a href="https://www.instagram.com/{{ page.instagram }}/" target="_blank">
-      <p>Instagram<br /><strong>@{{ page.instagram }}</strong></p>
+      <p>Instagram</p>
+      <p><strong>@{{ page.instagram }}</strong></p>
     </a>
 
     <a href="https://{{ page.website }}/" target="_blank">
-      <p>Página<br /><strong>{{ page.website }}</strong></p>
+      <p>Página</p>
+      <p><strong>https://{{ page.website }}</strong></p>
     </a>
 
     {% if page.google %}
