:lipstick: Melhora de legibilidade e detalhe para eventos futuros com separação data

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -119,7 +119,17 @@ site.url | append: site.baseurl | append: "/images/" | append: page.thumbnail %}
     }
 
     h3 {
-      font-size: 2rem;
+      font-size: 2.5rem;
+      text-align: center;
+    }
+
+    h3.date {
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+    }
+
+    h4 {
+      font-size: 1.5rem;
       text-align: center;
     }
 
