--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,11 +24,11 @@
     return Math.round((second - first) / (1000 * 60 * 60 * 24))
   }
 
-  document.querySelectorAll(".event").forEach((event, index) => {
+  document.querySelectorAll(".date").forEach((event, index) => {
     const eventDate = new Date(event.dataset.date)
     const days = diff(today, eventDate)
 
-    if (days < 0 || days > 31) {
+    if (days < -1 || days > 31) {
       event.style.display = "none"
     }
   })
