--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -42,7 +42,7 @@
 
     <a href="https://{{ page.website }}/" target="_blank">
       <p>Página</p>
-      <p><strong>https://{{ page.website }}</strong></p>
+      <p><strong>{{ page.website }}</strong></p>
     </a>
 
     {% if page.google %}
