:sparkles: adicionar Casa do Mestre em Barretos

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -159,6 +159,11 @@
       font-size: 2rem;
     }
 
+    small {
+      display: block;
+      text-align: center;
+    }
+
     a,
     a:visited {
       text-decoration: none;
