:construction: construindo a divulgação do Circuito Digimon 2026

--- a/_layouts/store.html
+++ b/_layouts/store.html
@@ -18,6 +18,10 @@
   div.store {
     display: none;
   }
+
+  iframe {
+    width: calc(100% - 1rem);
+  }
 </style>
 
 {% assign events = site.posts | where: "store", page.title %}
