--- a/_layouts/grand_prix.html
+++ b/_layouts/grand_prix.html
@@ -17,15 +17,24 @@
     max-width: 32rem;
   }
 
-  div.games {
-    margin-bottom: 2rem;
+  ol {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+
+    min-width: 80%;
+    max-width: 32rem;
   }
 
-  img {
-    width: 450px;
-    max-width: 100%;
-    object-fit: contain;
-    aspect-ratio: 3 / 1;
+  li {
+    display: flow;
+    flex-direction: row;
+    align-items: flex-start;
+
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-align: left;
   }
 </style>
 
